Added basic Main Menu and Server Browser. Also added blank Lobby (not yet functional).

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,3 +4,7 @@ ProjectID=53B1EF9A44539F6747DCCEAC87E8F45A
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Development
+
